[package]
name = "scd4x"
version = "0.2.3"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
documentation = "https://docs.rs/scd4x"
repository = "https://github.com/hauju/scd4x-rs.git"
license = "MIT OR Apache-2.0"
description = "Rust driver for the Sensirion SCD4x series. Carbon Dioxide / Temperature / Humidity sensors."
keywords = ["scd40", "scd41", "sensirion", "driver", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
readme = "README.md"
edition = "2018"
default-run = "scd4x-util"

[features]
scd41 = []
util = [ "structopt", "simplelog", "humantime", "linux-embedded-hal", "anyhow" ]
default = []

[dependencies]
sensirion-i2c = "0.1"
embedded-hal = "0.2"

log = { version = "0.4.16", default_features = false }
defmt = { version = "0.3.0", optional = true }
anyhow = { version = "1.0.56", optional=true, default_features = false }

structopt = { version = "0.3.26", optional = true }
linux-embedded-hal = { version = "0.3.2", optional = true }
simplelog = { version = "0.12.0", optional = true }
humantime = { version = "2.1.0", optional = true }


[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.8"

[[bin]]
name = "scd4x-util"
path = "bin/main.rs"
required-features = ["util"]
