[package]
name = "scd4x"
version = "0.3.0"
authors = ["Hauke Jung <hauke.jung@outlook.de>"]
documentation = "https://docs.rs/scd4x"
repository = "https://github.com/hauju/scd4x-rs.git"
license = "MIT OR Apache-2.0"
description = "Rust driver for the Sensirion SCD4x series. Carbon Dioxide / Temperature / Humidity sensors."
keywords = ["scd40", "scd41", "sensirion", "driver", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
readme = "README.md"
edition = "2018"
default-run = "scd4x-util"

[features]
scd41 = []
util = [ "dep:structopt", "dep:simplelog", "dep:humantime", "dep:linux-embedded-hal", "dep:anyhow" ]
embedded-hal-async = [ "dep:embedded-hal-async", "sensirion-i2c/embedded-hal-async"]
default = []
thiserror = [ "dep:thiserror", "std" ]
std = []

[dependencies]
sensirion-i2c = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }

log = { version = "0.4.16", default_features = false }
defmt = { version = "0.3.0", optional = true }
anyhow = { version = "1.0.56", optional = true, default_features = false }

structopt = { version = "0.3.26", optional = true }
linux-embedded-hal = { version = "0.4.0", optional = true }
simplelog = { version = "0.12.0", optional = true }
humantime = { version = "2.1.0", optional = true }


[dev-dependencies]
linux-embedded-hal = "0.4.0"
embedded-hal-mock = "0.10.0"

[[bin]]
name = "scd4x-util"
path = "bin/main.rs"
required-features = ["util"]
