[package]
name = "scd4x-embassy-esp32c3-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# SCD4x CO2/temperature/humidity sensor
scd4x = { path = "../..", features = ["embedded-hal-async"] }

# esp-hal 0.23 ecosystem
esp-hal = { version = "0.23", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.6", features = ["esp32c3"] }
esp-backtrace = { version = "0.15", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32c3"] }
esp-alloc = "0.6"

embassy-executor = "0.7"
embassy-time = "0.4"

[[bin]]
name = "scd4x-embassy-esp32c3-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
